# Awai

./: .gitignore  README.md  System.json  config.py  cooldown_manager.py  forwarder.py  main.py  pyproject.toml  requirements.txt  rules.json.example  rules.py  system_config.py  ui.py
.github/wix/: installer.wxs
.github/workflows/: release.yml
